# ETL_data_cinema

ETL_cinema/: README.md  pyproject.toml  setup.cfg  setup.py
ETL_cinema/.tmp_dagster_home_cb977puq/history/: runs.db
ETL_cinema/.tmp_dagster_home_cb977puq/history/runs/: index.db
ETL_cinema/.tmp_dagster_home_cb977puq/schedules/: schedules.db
ETL_cinema/.tmp_dagster_home_d1jo9f1i/history/: runs.db
ETL_cinema/.tmp_dagster_home_d1jo9f1i/history/runs/: index.db
ETL_cinema/.tmp_dagster_home_d1jo9f1i/schedules/: schedules.db
ETL_cinema/.tmp_dagster_home_gf564dgh/history/: runs.db
ETL_cinema/.tmp_dagster_home_gf564dgh/history/runs/: 067586c6-55ce-47ca-834f-7363c8801344.db  09275984-d39f-4a3b-afd5-f83ea3adce65.db  0bfa85b8-c049-405b-b037-87516502876e.db  0ca5fad0-9f87-47d1-9d21-af1725182cfe.db  17cf9527-a499-44c6-8abf-35f32c540403.db  2755ec2b-8839-4289-8c27-afcc063b2e4a.db  2769348f-2ba4-40b6-807a-b9ee44cbe38b.db  2c898632-f0b8-4774-8ea9-85188deccc60.db  3dc741e9-5b70-4265-98e1-9b63ee9d24fd.db  index.db  (+22 more)
ETL_cinema/.tmp_dagster_home_gf564dgh/schedules/: schedules.db
ETL_cinema/.tmp_dagster_home_gf564dgh/storage/: crawl_data  load_data_customer  transform_data
ETL_cinema/.tmp_dagster_home_x4szjjg7/history/: runs.db
ETL_cinema/.tmp_dagster_home_x4szjjg7/schedules/: schedules.db
ETL_cinema/.tmp_dagster_home_x4szjjg7/storage/: crawl_data  load_data_discount  load_data_showtime  transform_data
ETL_cinema/ETL_cinema/: assets.py  definitions.py  resources.py
ETL_cinema/db_create/: db.sql  table.py
ETL_cinema/transform_data/: transform.py
data/: Cinema.csv  (+12 more)
(+25 files in other folders)
