[project]
name = "ETL_cinema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "ETL_cinema.definitions"
code_location_name = "ETL_cinema"

[tool.setuptools.packages.find]
exclude=["ETL_cinema_tests"]
